- Göndeirlmiş mesajların listesini veren fonksiyon API üzerinde eklendi. - Gerekli swagger düzenlemeleri yapıldı. - Log yapısı düzenlendi. - Readme güncellendi.
